@@ -1,5 +1,9 @@
 2007-07-26  George Giolfan  <georgegiolfan@yahoo.com>
 
+	* ImageTest.cs: Added MeasureOverrideInfiniteAvailableSize.
+
+2007-07-26  George Giolfan  <georgegiolfan@yahoo.com>
+
 	* ImageTest.cs: Added MeasureOverrideStretchUniformToFillDifferentWidthHeight.
 
 2007-07-25  George Giolfan  <georgegiolfan@yahoo.com>
